Refactor server architecture: consolidate Server, SSEManager, and FileWatcher into separate classes for improved organization and maintainability